log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 05:39:11 PM UTC: 
 tests:  0|6
total_score: 0/70
e6c1669
Fri 31 Mar 2023 05:50:38 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:36: error: expected ‘)’ before ‘;’ token
   17 |   list->data = malloc(sizeof(void*);
      |                      ~             ^
      |                                    )
arraylist.c:18:15: error: expected ‘;’ before ‘}’ token
   18 |   return list;
      |               ^
      |               ;
   19 | }
      | ~              
arraylist.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8bb3d5a
